[Lists#refactor] 使用 getFirst/getLast 替代下标访问，提升可读性